--- a/style.css
+++ b/style.css
@@ -111,6 +111,74 @@ li a{
     margin: 0 20px;
 }
 
+/* ----popular tour section----- */
+
+.populars-tours{
+    display: flex;
+    margin: 50px 170px;
+    gap: 50px;
+}
+.text-tour p{
+    margin-top: 20px;
+    font-size: 1rem;
+}
+.btn-tour{
+    border-radius: 5px;
+    background: #FF5400;
+    color: #FFF;
+    border: none;
+    width: 174px;
+    height:52px;
+    font-size: 1.1rem;
+    margin-top: 20px;
+}
+.popular-title{
+    color: #131318;
+    font-size: 2.5rem;
+}
+.tour-img img{
+    /* width: 140%;
+    height: 110%; */
+}
+
+
+
+/* destination section--------- */
+.img2{
+    display: flex;
+    gap: 20px;
+    margin: 20px 170px;
+    
+}
+.img2 img{
+    /* width: 100%;
+    height: 100%; */
+}
+.destination-section{
+    margin-top: 50px;
+}
+
+.destination-title{
+    color: #131318;
+    font-size: 2.5rem;
+}
+.destination-section .destination-title,p{
+    text-align: center;
+}
+
+.img3{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    margin: 20px 170px;
+    gap: 20px;
+}
+.img4{
+    display: flex;
+    margin: 20px 170px;
+    gap: 20px;
+}
+
+
 
 /* ---media query--- */
 /*--------- medium device or mobile------ */
@@ -134,6 +202,38 @@ li a{
     }
     .banner-title, .banner-description{
         width: 100%;
+    }
+    .populars-tours{
+        flex-direction: column;
+        margin: 20px 40px;
+    }
+    .tour-img img{
+        width: 100%;
+    }
+    .img2{
+        flex-direction: column;
+        margin: 20px 30px;
+        
+        
+    }
+    .img3{
+        grid-template-columns: repeat(1,1fr);
+        margin: 20px 30px;
+        
+    }
+    .img4{
+        flex-direction: column;
+        margin: 20px 30px;
+
+    }
+    .img2 img{
+        width: 350px;
+    }
+    .img3 img{
+        width: 350px;
+    }
+    .img4 img{
+       width: 350px;
     }
 }
 
