--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ font-family: 'Merriweather', serif;
 font-family: 'Mulish', sans-serif;
 }
 
+
 /* ----nav section------- */
 
 .header{
@@ -144,10 +145,13 @@ li a{
 
 
 /* destination section--------- */
+
 .img2{
     display: flex;
-    gap: 20px;
-    margin: 20px 170px;
+    gap: 15px;
+    margin-top: 15px;
+    margin-left: 180px;
+    margin-right: 180px;
     
 }
 .img2 img{
@@ -155,7 +159,7 @@ li a{
     height: 100%; */
 }
 .destination-section{
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 .destination-title{
@@ -169,15 +173,149 @@ li a{
 .img3{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    margin: 20px 170px;
-    gap: 20px;
+    margin-top: 15px;
+    margin-left: 180px;
+    margin-right: 180px;
+    gap: 15px;
 }
 .img4{
     display: flex;
-    margin: 20px 170px;
-    gap: 20px;
+    margin-top: 15px;
+    margin-left: 180px;
+    margin-right: 180px;
+    gap: 15px;
 }
 
+.imgone{
+    position: relative;
+}
+.imgone h3{
+    color: #fff;
+    position: absolute;
+    bottom: 50%;
+    left: 40%;
+}
+.imghalf{
+    position: relative;
+}
+.imghalf h3{
+    color: #fff;
+    position: absolute;
+    bottom: 50%;
+    left: 40%;
+}
+.imgtow{
+    position: relative;
+}
+.imgtow h3{
+    color: #fff;
+    position: absolute;
+    bottom: 50%;
+    left: 40%
+}
+.imgthree{
+    position: relative;
+}
+.imgthree h3{
+    color: #fff;
+    position: absolute;
+    bottom: 50%;
+    left: 40%
+}
+.imgfour{
+    position: relative;
+}
+.imgfour h3{
+    color: #fff;
+    position: absolute;
+    bottom: 50%;
+    left: 40%
+}
+.imgfive{
+    position: relative;
+}
+.imgfive h3{
+    color: #fff;
+    position: absolute;
+    bottom: 50%;
+    left: 40%
+}
+.imgsix{
+    position: relative;
+}
+.imgsix h3{
+    color: #fff;
+    position: absolute;
+    bottom: 50%;
+    left: 40%
+}
+
+/* ---choose section--- */
+
+
+.choose-title{
+    color: #131318;
+    font-size: 2.8rem;
+    padding-bottom: 20px;
+}
+.choose-description{
+    color: rgba(19, 19, 24, 0.70);
+     font-size: 1rem;
+     padding-bottom: 45px;
+}
+.choose-text{
+    text-align: center;
+    margin-top: 100px;
+}
+.choose-card{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin-left: 230px;
+    margin-right: 230px;
+    
+
+}
+.card1, .card2, .card3{
+    width: 500px;
+    border: none;
+
+}
+.card1{
+    border-radius: 16px;
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+    padding:30px 30px
+    
+}
+.card1, .card2, .card3 img{
+    padding-bottom: 30px;
+}
+.choose-card-title{
+    padding:20px 0;
+}
+.card2{
+    border-radius: 16px;
+    border: 1px solid rgba(41, 206, 246, 0.20);
+    background: rgba(41, 206, 246, 0.05);
+    padding:30px 30px
+}
+.card3{
+    margin: 30px auto;
+    border-radius: 16px;
+    border: 1px solid rgba(233, 68, 68, 0.20);
+    background: rgba(233, 68, 68, 0.05);
+    padding:30px 30px;
+}
+.choose-card-title{
+   color: #131318;
+   font-size: 1.8rem;
+   padding-left: 40px;
+}
+.choose-card-description{
+    color: #5A5A5D;
+    font-size: 1rem;
+    
+}
 
 
 /* ---media query--- */
@@ -186,10 +324,21 @@ li a{
 
 @media screen and (max-width:600px) {
     .nav{
-      
+      flex-direction: column;
+    }
+    .nav-list ul{
+      flex-direction: column;
+
+    }
+    .banner-img{
+        width: 100%;
     }
     .banner-container{
-        padding: 20px 20px;
+        padding: 10px 10px;
+    }
+    .banner-text{
+        margin-left: 20px;
+        margin-right: 20px;
     }
     .banner-input{
         margin: 0 25%;
@@ -205,35 +354,86 @@ li a{
     }
     .populars-tours{
         flex-direction: column;
-        margin: 20px 40px;
+        margin-top: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
     }
     .tour-img img{
         width: 100%;
     }
     .img2{
         flex-direction: column;
-        margin: 20px 30px;
+        margin-top: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
         
         
     }
     .img3{
         grid-template-columns: repeat(1,1fr);
-        margin: 20px 30px;
+        margin-top: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
         
     }
     .img4{
         flex-direction: column;
-        margin: 20px 30px;
+        margin-top: 20px;
+        margin-left: 20px;
+        margin-right: 20px;
 
     }
     .img2 img{
-        width: 350px;
+        width: 100%;
     }
     .img3 img{
-        width: 350px;
+        width: 100%;
     }
     .img4 img{
-       width: 350px;
+       width: 100%;
+    }
+    .destination-sectio p{
+     
+    }
+    .destination-title{
+     
+    }
+    .imgtow h3{
+        color: #FFF;
+         position: relative;
+         bottom: 50%;
+         left: 10%;
+    }
+    .imgsix h3{
+        bottom: 50%;
+    left: 40%;
+    }
+    .choose-card{
+        grid-template-columns: repeat(1,1fr);
+        gap: 20px;
+        margin-top: 20px;
+        margin-left: 20px;
+        
+    }
+    .choose-description{
+       width: 394px;
+    }
+    .card1, .card2{
+       width: 120%;
+       height: 100%;
+       margin-left: auto;
+       margin-right: 20px;
+        
+    }
+    main{
+     width: 385px;
+    }
+    .card3{
+        width: 90%;
+        margin-top: 20px;
+        margin-left: 20px;
+        
+
     }
 }
 
