--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ li a{
 .nav-img-title{
     display: flex;
     align-items: center;
+    
 }
 .nav-img-title img{
     width: 3rem;
@@ -58,7 +59,7 @@ li a{
 .nav-title{
     font-size: 2.2rem;
 }
-.Travel{
+.Travelnav{
     color: #131318;
 
 
@@ -131,6 +132,7 @@ li a{
     margin: 50px 170px;
     padding-top: 50px;
     gap: 50px;
+    text-align:left ;
 }
 .text-tour p{
     margin-top: 20px;
@@ -315,11 +317,12 @@ li a{
 .choose-card-title{
    color: #131318;
    font-size: 1.8rem;
-   padding-left: 40px;
+   /* padding-left: 40px; */
 }
 .choose-card-description{
     color: #5A5A5D;
     font-size: 1rem;
+    text-align:left ;
     
 }
 
@@ -355,7 +358,51 @@ li a{
     color: #131318;
     font-size: 1rem;
     padding-bottom: 20px;
+    text-align:left ;
 }
+
+
+
+/* --------bounus part from me. recently vistied---------- */
+
+.recent-visit{
+    display: flex;
+    gap: 30px;
+    margin-left: 170px;
+    margin-right: 170px;
+    margin-top: 100px;
+}
+.recent-img img{
+  width: 100%;
+  border-radius: 16px;
+  
+  
+}
+.recent-container p{
+    text-align:left ;
+    font-size: 1rem;
+    color: #313137;
+    margin-top: 20px;
+}
+.recent-container h2{
+    padding-bottom: 20px;
+}
+
+.recent-visit p{
+    color: #FFF;
+    padding-left: 30px;
+}
+.recent-title{
+    color:tomato;
+    padding-left: 30px;
+    padding-top: 20px;
+}
+.recent-visit{
+    height: 500px;
+    background-image: url('./pexels-symeon-ekizoglou-2105785.jpg');
+    border-radius: 16px;
+}
+
 /* .simple-place-img{
     position: relative;
 } */
@@ -391,6 +438,7 @@ li a{
 .newsletter-section p{
     color: #5A5A5D;
     font-size: 1rem;
+    text-align:left ;
 }
 .newsletter-content{
     border: 1px solid #FF5400;
@@ -425,6 +473,40 @@ li a{
     
 }
 
+
+/* ----footer section--- */
+
+footer{
+    background: rgba(19, 19, 24, 0.05);
+    height: 500px;
+}
+
+.footer-img-title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 110px;
+}
+.footer-description{
+    height: 50px;
+    color: #5A5A5D;
+    font-size: 1rem;
+    padding: 15px 335px;
+}
+.copyright{
+    text-align: center;
+    padding-top: 200px;
+}
+
+.footer-description img{
+    padding-left: 330px;
+}
+.social-link{
+ display: flex;
+ gap: 20px;
+ justify-content: center;
+ padding-bottom: 50px;
+}
 
 /* ---media query--- */
 /*--------- medium device or mobile------ */
@@ -548,12 +630,13 @@ li a{
 
     }
     .simple-place-content p{
-        width: 350px;
+        width: 300px;
         /* padding: 10px 50px; */
 
     }
     .simple-place-content{
         /* margin-right: 200px; */
+        
     }
     .simple-place-content h1{
         width: 240px;
@@ -569,6 +652,20 @@ li a{
     .simple-place-title{
        text-align: center;
        padding-left: 80px;
+    }
+
+    .recent-visit{
+       flex-direction: column;
+       margin: 20px 20px;
+       
+    }
+    .pic, .pic2{
+
+    }
+    .recent-img img{
+        width: 35%;
+        height: 100%;
+        margin: 10px 20px;
     }
     .newsletter-section{
         flex-direction: column;
@@ -593,6 +690,13 @@ li a{
     }
     .save{
         font-size: 12px;
+    }
+    .footer-description, .footer-img-title{
+      margin: 20px 10px;
+      padding-right: 100px;
+      padding-left: 100px;
+      padding-bottom: 0px;
+
     }
 }
 
